# failcore

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  README_ZH.md  SECURITY.md  TODO.py  debug_inspect.py  debug_process_executor.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  examples.yml
artifacts/: demo.jsonl
docs/: design.md
docs/en/: getting-started.md  index.md
docs/zh/: getting-started.md  index.md
examples/: README.md  demo.py  example.py  langchain.py  langchain_with_failcore.py  run_comparison.py
examples/basic/: langchain_integration.py  mcp_mode.py  proxy_mode.py  sample_sdk.py
examples/mcp/: full_test.py
failcore/: __init__.py
failcore/adapters/: __init__.py
failcore/api/: __init__.py  context.py  errors.py  guard.py  presets.py  run.py  session.py
failcore/cli/: analyze_cmd.py  forensic_cmd.py  list_cmd.py  main.py  replay_cmd.py  report_cmd.py  show.py  show_cmd.py  trace.jsonl  trace_cmd.py  trace_viewer.py  validate_cmd.py
failcore/config/: __init__.py  analysis.py  boundaries.py  config.yml.example  cost.py  guards.py  loader.py  proxy.py  validator.py
failcore/core/: __init__.py
failcore/gateways/: __init__.py
failcore/infra/: __init__.py
failcore/presets/: __init__.py  policies.py  tools.py  validators.py
failcore/utils/: __init__.py  path_resolver.py  paths.py  process.py
failcore/web/: app.py
src/failcore/: __init__.py
tests/: count.py  examples.py  golden_trace.jsonl  real_world_agent.py  smoke_failcore.py  test_concurrent_isolation.py  test_policy_packs.py  test_process_executor.py  test_receipt.py
tests/adapters/: test_guard_tool_context.py
tests/audit/: __init__.py  test_side_effect_boundary.py
tests/cost/: test_burn_rate_and_tokens.py  test_cost_guardrails.py  test_cost_integration.py  test_cost_run_api.py
tests/drift/: test_baseline_rules.py  test_drift_basic.py
tests/egress/: __init__.py  test_side_effect_egress.py
tests/executor/: __init__.py  test_timeout_system.py
(+653 files in other folders)
